# shitty_raytracer

./: CMakeLists.txt  README.md  main.cpp  rt_circle.cpp  rt_circle.hpp
